--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                   </h1>
                   <div class="subheading mb-5">
                       <div class="social-icons">
-                           <a class="social-icon" href="#"><i class="fab fa-linkedin-in"><ref="http://www.linkedin.com/in/byungchan-lim"></i></a>
+                           <a class="social-icon" href="http://www.linkedin.com/in/byungchan-lim"><i class="fab fa-linkedin-in"></i></a>
                        </div>
                   </div>
               </section>
