--- a/index.html
+++ b/index.html
@@ -46,8 +46,24 @@
                       <div class="social-icons">
                            <a class="social-icon" href="http://www.linkedin.com/in/byungchan-lim"><i class="fab fa-linkedin-in"></i></a>
                        </div>
+                       <p class="lead mb-5">Dedicated and hardworking professional, offering hands-on years of experience in clinical and technical operations with extensive fast-paced environments.</p>
                   </div>
-              </section>
+               </section>
+               <!-- zero space (margin) between pages?-->
+               <hr class="m-0" />
+               <!-- Experience-->
+               <section class="resume-section" id="experience">
+                <div class="resume-section-content">
+                    <h2 class="mb-5">Experience</h2>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">U.S Army</h3>
+                            <div class="subheading mb-3">Fort Belvoir, VA</div>
+                            <p>Focused on providing the highest level of patient care by working in close collaboration with 4N FBCH and 7W Walter Reed National Military Medical Center directors. Devised robust communication strategies and introduced an appropriate course of action plan, facilitating Inpatient Psychiatric units in both hospitals.</p>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">November 2015 - November 2019</span></div>
+                    </div>
+               </div>
         </div>
     </body>
 </html>
