--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
                         <div class="flex-shrink-0"><span class="text-primary">November 2015 - November 2019</span></div>
                     </div>
                </div>
+            </section>
         </div>
     </body>
 </html>
