--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
               </div>
         </nav>
 
-    <!-- Page Content -->
+        <!-- Page Content -->
         <div class="container-flud p-0">
       
             <!-- About-->
@@ -66,5 +66,12 @@
                </div>
             </section>
         </div>
+        <!-- Bootstrap core JS-->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"></script>
+        <!-- Third party plugin JS-->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
+        <!-- Core theme JS-->
+        <script src="js/scripts.js"></script>
     </body>
 </html>
