--- a/index.html
+++ b/index.html
@@ -65,6 +65,26 @@
                     </div>
                </div>
             </section>
+            <!-- Education-->
+            <section class="resume-section" id="education">
+                <div class="resume-section-content">
+                    <h2 class="mb-5">Education</h2>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                        <h3 class="mb-0">University of Washington</h3>
+                        <div class="subheading mb-3">Bachelor of Arts</div>
+                        <div>Geography with Data Science</div>
+                    </div>
+                    <div class="flex-shrink-0"><span class="text-primary">January 2020 - Present</span></div>
+                 </div>
+                  <div class="d-flex flex-column flex-md-row justify-content-between">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Highline College</h3>
+                            <div class="subheading mb-3">Associate Degree</div>
+                            <div>Business Accounting</div>
+                         </div>
+                    </div>
+                </section>
         </div>
         <!-- Bootstrap core JS-->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
