--- a/index.html
+++ b/index.html
@@ -83,6 +83,35 @@
                             <div class="subheading mb-3">Associate Degree</div>
                             <div>Business Accounting</div>
                          </div>
+                         <div class="flex-shrink-0"><span class="text-primary">January 2020 - Present</span></div>
+                    </div>
+                </section>
+                <!-- software skills-->
+                <section class="resume-section" id="software skills">
+                    <div class="resume-section-content">
+                        <h2 class="mb-5">Software Experience</h2>
+                        <div class="subheading mb-4">Programming Langues & Tools</div>
+                        <style>
+                            table, th, td {
+                                border: 1px solid lightgray;
+                                border-collapse: collapse;
+                            }
+                            th, td {
+                                padding: 10px;
+                            }
+                        </style>
+                        <table>
+                            <tr>
+                                <th>Strong</th>
+                                <th>Moderate</th>
+                                <th>Basic</th>
+                            </tr>
+                            <tr>
+                                <td>Microsoft Office</td>
+                                <td>ArcGIS</td>
+                                <td>QGIS</td>
+                             </tr>
+                        </table>
                     </div>
                 </section>
         </div>
