--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                     </div>
                 </section>
                 <!-- software skills-->
-                <section class="resume-section" id="software skills">
+                <section class="resume-section" id="software Experience">
                     <div class="resume-section-content">
                         <h2 class="mb-5">Software Experience</h2>
                         <div class="subheading mb-4">Programming Langues & Tools</div>
@@ -107,9 +107,9 @@
                                 <th>Basic</th>
                             </tr>
                             <tr>
-                                <td>Microsoft Office</td>
-                                <td>ArcGIS</td>
-                                <td>QGIS</td>
+                                <td>Microsoft Office, ArcGIS, QGIS</td>
+                                <td>R Language, Python</td>
+                                <td>Java, MapBox</td>
                              </tr>
                         </table>
                     </div>
