--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                           <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
                           <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience">Experience</a></li>
                           <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Education</a></li>
-                          <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Software Skills</a></li>
+                          <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#software experience">Software Experience</a></li>
                     </ul>
               </div>
         </nav>
@@ -86,7 +86,7 @@
                          <div class="flex-shrink-0"><span class="text-primary">January 2020 - Present</span></div>
                     </div>
                 </section>
-                <!-- software skills-->
+                <!-- software experience-->
                 <section class="resume-section" id="software Experience">
                     <div class="resume-section-content">
                         <h2 class="mb-5">Software Experience</h2>
