--- a/index.html
+++ b/index.html
@@ -83,11 +83,11 @@
                             <div class="subheading mb-3">Associate Degree</div>
                             <div>Business Accounting</div>
                          </div>
-                         <div class="flex-shrink-0"><span class="text-primary">January 2020 - Present</span></div>
+                         <div class="flex-shrink-0"><span class="text-primary">March 2013 - June 2015</span></div>
                     </div>
                 </section>
                 <!-- software experience-->
-                <section class="resume-section" id="software Experience">
+                <section class="resume-section" id="software experience">
                     <div class="resume-section-content">
                         <h2 class="mb-5">Software Experience</h2>
                         <div class="subheading mb-4">Programming Langues & Tools</div>
