--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                           <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
                           <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience">Experience</a></li>
                           <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Education</a></li>
-                          <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#software experience">Software Experience</a></li>
+                          <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#software">Software Experience</a></li>
                     </ul>
               </div>
         </nav>
@@ -87,7 +87,7 @@
                     </div>
                 </section>
                 <!-- software experience-->
-                <section class="resume-section" id="software experience">
+                <section class="resume-section" id="software">
                     <div class="resume-section-content">
                         <h2 class="mb-5">Software Experience</h2>
                         <div class="subheading mb-4">Programming Langues & Tools</div>
